set default 3gp for bad phones

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -6,6 +6,7 @@
         <item>音声回線</item>
         <item>マイク</item>
         <item>システムデフォルト</item>
+        <item>VoIP</item>
         <item>システム RAW</item>
     </string-array>
 
